revert hero image loading jump fix

--- a/src/css/homePage.module.css
+++ b/src/css/homePage.module.css
@@ -197,7 +197,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: calc(100% - 40px);
+  width: 100%;
   max-width: 1000px;
   z-index: 50;
   transform: translate(-50%, -50%);
